==> LexiPstar/TEM-HUM/tem+hum/Hardware/buzzer.c <==
#include "buzzer.h"

void buzzer_Init(void)
{
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
	
	/*GPIO初始化*/
	GPIO_InitTypeDef GPIO_InitStructure;					//定义结构体变量
	
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;		//GPIO模式，赋值为推挽输出模式
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12;				//GPIO引脚，赋值为所有引脚
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		//GPIO速度，赋值为50MHz
	
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	GPIO_SetBits(GPIOB, GPIO_Pin_12);
}

void buzzer_on(void)
{
	GPIO_ResetBits(GPIOB, GPIO_Pin_12);
	Delay_ms(50);
}

void buzzer_off(void)
{
	GPIO_SetBits(GPIOB, GPIO_Pin_12);
	Delay_ms(50);
}
